src/assets/css/layout.css
body {
    font-family: "Open Sans", sans-serif;
    color: #272829;
  }
  
  h1, h2, h3, h4, h5, h6 {
    font-family: "Raleway", sans-serif;
  }
  
  /** Navbar **/
  #header {
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 14vw;
    transition: all ease-in-out 0.5s;
    z-index: 0;
    transition: all 0.4s;
    padding: 0 15px;
    background: #010101;
    overflow-y: auto;
  }
  /** Bubble portfolio image **/
  #header .profile img {
    margin: 15px auto;
    display: block;
    width: 150px;
    border: 12px solid #2c2f3f;
  }
  /** Navbar name **/
  #header .profile h1 {
    font-size: 20px;
    margin: 0;
    padding: 0;
    font-weight: 550;
    -moz-text-align-last: center;
    text-align-last: center;
    font-family: "Poppins", sans-serif;
  }
  /** Navbar name color **/
  #header .profile h1 a, #header .profile h1 a:hover {
    color: #fff;
  }
  /** Social media bubbles **/
  #header .profile .social-links a {
    font-size: 28px;
    display: inline-block;
    background: #212431;
    color: #fff;
    line-height: 1;
    padding: 9px 0;
    margin-right: 4px;
    border-radius: 50%;
    text-align: center;
    width: 45px;
    height: 45px;
    transition: 0.4s;
  }
  /** Color when hovering on social media **/
  #header .profile .social-links a:hover {
    background: #0b5577;
    color: #fff;
  }

  #main {
    margin-left: 300px;
  }
  
  @media (max-width: 1199px) {
    #header {
      left: -300px;
    }
    #main {
      margin-left: 0;
    }
  }
  
  /** Space between social media and links in navbar **/
  .nav-menu {
    padding-top: 20px;
  }
  /** Navbar bullet points **/
  .nav-menu * {
    margin: 0;
    padding: 0;
    list-style: none;
  }
  /** Navbar links **/
  .nav-menu a {
    display: flex;
    align-items: center;
    color: #dddfe9;
    padding: 12px 15px;
    margin-bottom: 8px;
    transition: 0.3s;
    font-size: 16px;
  }
  /** Navbar link icons **/
  .nav-menu a i {
    font-size: 25px;
    padding-right: 12px;
    color: #656777;
  }
  
  .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
    color: #fff;
  }
  
  .nav-menu a:hover i, .nav-menu .active > a i, .nav-menu li:hover > a i {
    color: #1d95cc;
  }
  
  .mobile-nav-toggle {
    display: flex;
    position: fixed;
    right: 15px;
    top: 15px;
    z-index: 9998;
    border: 0;
    background: none;
    font-size: 24px;
    transition: all 0.4s;
    outline: none !important;
    line-height: 1;
    cursor: pointer;
    text-align: right;
  }
  
  .mobile-nav-toggle i {
    color: #149ddd;
  }
  
  .mobile-nav-active {
    z-index: 9999;
    overflow: hidden;
  }
  
  .mobile-nav-active #header {
    left: 0;
  }
  
  .mobile-nav-active .mobile-nav-toggle i {
    color: #fff;
  }

  /** First image of page **/
  #first-image {
    display: flex;
    width: 100%;
    height: 65vh;
    background: linear-gradient(to right, #000000, rgb(1, 12, 27));
    z-index: -1;
  }

  /** Background animation **/
  .stagger-visualizer {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 17rem;
    height: 17rem;
  }
  
  .stagger-visualizer div {
    width: 1rem;
    height: 1rem;
    border: 1px solid rgb(255, 255, 255);
    background-color: transparent;
    margin-top: -90px
  }
  
  #first-image .first-image-container {
    position: relative;
    z-index: 2;
    min-width: 300px;
  }
  
  #first-image h1 {
    margin: 0 0 10px 0;
    font-size: 64px;
    font-weight: 700;
    line-height: 56px;
    color: #fff;
  }
  
  #first-image h2 {
    margin: 0 0 10px 0;
    font-size: 32px;
    font-weight: 600;
    line-height: 46px;
    color: #fff;
  }
  
  #first-image p {
    color: #fff;
    margin-bottom: 50px;
    font-size: 26px;
    font-family: "Poppins", sans-serif;
  }
  
  #first-image p span {
    color: #fff;
    padding-bottom: 4px;
    letter-spacing: 1px;
    border-bottom: 3px solid #149ddd;
  }

  @media (min-width: 1024px) {
    #first-image {
      background-attachment: fixed;
    }
  }
  
  @media (max-width: 768px) {
    #first-image h1 {
      font-size: 28px;
      line-height: 36px;
    }
    #first-image h2 {
      font-size: 18px;
      line-height: 24px;
      margin-bottom: 30px;
    }
  }

  .divider {
    display: flex;
    height: 1px;
    background: #000;
    background: -webkit-linear-gradient(left, rgb(255,255,255) 0%, rgb(50,50,50) 45%, rgb(50,50,50) 85%, rgb(255,255,255) 100%);
  }
  .divider.light {
    display: flex;
    background: #fff;
    background: -webkit-linear-gradient(left, rgb(90,90,90) 0%, rgb(255,255,255) 50%, rgb(90,90,90) 100%);
  }

section {
  padding: 60px 0;
  overflow: hidden;
  background: #000000;
}

.section-title {
  padding-bottom: 15px;
}
/** About Me title **/
.section-title h2 {
  font-family: 'Ubuntu', sans-serif;
  font-size: 40px;
  font-weight: bold;
  margin-bottom: 20px;
  text-align: center;
  position: relative;
  color: #149ddd;
}

.about .content h3 {
  font-family: 'Ubuntu', sans-serif;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  font-weight: 700;
  font-size: 24px;
  color: #149ddd;
}

.about .content ul {
  list-style: none;
  padding: 0;
}

.about .content ul li {
  font-family: 'Ubuntu', sans-serif;
  color: #149ddd;
  font-size: 18px;
  padding-bottom: 10px;
}

.about .content ul i {
  font-size: 20px;
  padding-right: 2px;
  color: #e7ae11;
}

/** Color for typed-out text **/
.about .code-styling-1 {
  color: #e7ae11;
}

.about .code-styling-2 {
  color: #a3f9ff;
  /** 24c776 **/
}

@media (max-width: 768px) {
  .about .content h3 {
    font-size: 18px;
    white-space: normal;
  }

  .about .content ul {
    font-size: 12px;
  }

  section {
    font-size: 12px;
  }

  .about .content ul i {
    font-size: 0px;
  }
}

@media (min-width: 864px) {
  .about .content ul li {
    padding-left: 24%;
  }
}

.skills .progress {
  height: 50px;
  display: block;
  background: none;
}

.skills .progress .skill {
  padding: 0;
  margin: 0 0 6px 0;
  text-transform: uppercase;
  display: block;
  font-weight: 600;
  font-family: "Poppins", sans-serif;
  color: #ffffff;
}

.skills .progress .skill .val {
  float: right;
  font-style: normal;
}

.skills .progress-bar-wrap {
  background: #dce8f8;
}

.skills .progress-bar {
  width: 1px;
  height: 10px;
  background-color: #149ddd;
}

